Added section for Functional Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -330,6 +330,9 @@ capabilities.}
 
 \section{Background}
 
+\subsection{Functional Programming}
+\begin{frame}{Functional Programming}
+
 \begin{itemize}
 \item Functional programming.
 \note[item]{works by applying mathematical functions to arguments to get results. A program is not but functions which can also be passed 
