Added subsection for Logic Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -349,7 +349,7 @@ to other functions as arguments.}
 \end{itemize}
 \end{frame}
 
-
+\subsection{Logic Programming}
 \begin{frame}{Logic Programming}
 \begin{itemize}
 \item Logic programming.
