Added subsection for Existing and Proposed Work in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -362,7 +362,7 @@ to other functions as arguments.}
 \end{itemize}
 \end{frame}
 
-
+\subsection{Existing and Proposed Work}
 \begin{frame}{Existing and Proposed Work}
 \note[item]{Here we will look at the existing work,}
 \begin{itemize}
