Added subsection for Improvements in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -379,6 +379,7 @@ then compile and run it.}
 \end{itemize}
 \end{frame}
 
+\subsection{Improvements}
 \begin{frame}{Improvements}
 \note[item]{The improvements,}
 \begin{itemize}
