Added subsection for Other Contributions in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -392,6 +392,7 @@ then compile and run it.}
 \end{itemize}
 \end{frame}
 
+\subsection{Other Contributions}
 \begin{frame}{Other Contributions}
 \note[item]{In this section we will talk about, the contributions which are not neccessary an improvement on the current work but a new
 direction for solving the problem of embedding languages.}
