--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -416,7 +416,7 @@ direction for solving the problem of embedding languages.}
 \end{frame}
 
 
-
+\subsection{Embedding a Programming Language into another Programming Language}
 \begin{frame}{Embedding a Programming Language into another Programming Language}
 \note[item]{This section deals with embedding a target language in the host environement.}
 \note[item]{The aim of this approach to bring the target language functionalities to the host language.}
