Added subsection for haskell in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -463,7 +463,7 @@ operations along with two way pattern matching.}
 \end{frame}
 
 
-
+\subsection{\progLang{Haskell}}
 \begin{frame}{\progLang{Haskell}}
 \begin{itemize}
 \item
