Added subsection for Prolog in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -471,6 +471,7 @@ operations along with two way pattern matching.}
 
 \end{frame}
 
+\subsection{\progLang{Prolog}}
 \begin{frame}{\progLang{Prolog}}
 \begin{itemize}
 \item
