Added subsection for Related Concepts in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -479,7 +479,7 @@ operations along with two way pattern matching.}
 
 \end{frame}
 
-
+\subsection{Related Concepts}
 \begin{frame}{Related Concepts}
 \begin{itemize}
 \item
