Added subsection for Functorizing a language in What we did.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -490,7 +490,7 @@ operations along with two way pattern matching.}
 
 \section{What we did}
 
-
+\subsection{Functorizing a language}
 \begin{frame}{Functorizing a language}
 \begin{itemize}
 \item
