Added subsection for Monadic unification in What we did.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -499,7 +499,7 @@ operations along with two way pattern matching.}
 \end{frame}
 
 
-
+\subsection{Monadic unification}
 \begin{frame}{Monadic unification}
 \begin{itemize}
 \item
