Added subsection for Future Scope in What remains to do.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -554,6 +554,7 @@ operations along with two way pattern matching.}
 
 \section{What remains to do}
 
+\subsection{Future Scope}
 \begin{frame}{Future Scope}
 \begin{itemize}
 \item
