Added section for Conclusion.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -562,6 +562,7 @@ operations along with two way pattern matching.}
 
 \end{frame}
 
+\section{Conclusion}
 \begin{frame}{Conclusion}
 \begin{itemize}
 \item
