Added section for The End.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -570,6 +570,14 @@ operations along with two way pattern matching.}
 
 \end{frame}
 
+\section{The End}
+
+\begin{frame}{The End}
+\begin{center}
+\Huge Thank you
+\end{center}
+\end{frame}
+
 \begin{frame}{The End}
 \begin{center}
 \Huge Questions?
