--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -248,6 +248,29 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \end{itemize}
 \end{frame}
 
+\subsection{Functional Programming}
+\begin{frame}
+\frametitle{Functional Programming}
+  \begin{columns}[T]
+    \begin{column}{.6\textwidth}
+     \begin{block}{}
+Programming in a functional language consists of building definitions and using the computer to evaluate expressions. 
+\\*For example, \progLang{Haskell}.
+\note[item]{}
+    \end{block}
+    \end{column}
+    \begin{column}{.4\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=\textwidth]{function-machine.jpeg} 
+    \caption{Function}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+\end{frame}
+
 \begin{frame}{Motivation}
 \frametitle{(to be discarded ......)}
 \begin{itemize}
