Added section for Haskell in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -271,6 +271,30 @@ Programming in a functional language consists of building definitions and using 
   \end{columns}
 \end{frame}
 
+\subsection{\progLang{Haskell}}
+\begin{frame}
+\frametitle{\progLang{Haskell}}
+  \begin{columns}[T]
+    \begin{column}{.7\textwidth}
+     \begin{block}{}
+\progLang{Haskell} is an advanced purely-functional programming language. In particular, it is a polymorphically statically typed, lazy, purely functional language.
+\note[item]{}
+    \end{block}
+    \end{column}
+    \begin{column}{.3\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=\textwidth]{haskelllogo.jpg} 
+    \caption{\progLang{Haskell} Programming Language}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+
+\subsection{Motivation}
 \begin{frame}{Motivation}
 \frametitle{(to be discarded ......)}
 \begin{itemize}
