Added subsection for What was done Overview to What was done.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -364,6 +364,13 @@ particular domain.}
 
 \section{What was done}
 
+\subsection{Overview}
+\begin{frame}{What was done Overview}
+	
+	\frametitle{What was done Overview}
+	
+\end{frame}
+
 \subsection{Languages}
 \begin{frame}{Languages}
 \begin{itemize}
