Added content and script to Introduction Overview in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -162,6 +162,17 @@
 \begin{frame}{Introduction Overview}
 
 \frametitle{Introduction Overview}
+\note[item]{In this section we will talk about,}
+\begin{itemize}
+\item Programming languages and paradigms.
+
+\item Classification.
+\note[item]{How they are classified}
+
+\item Declarative programming and languages.
+\note[item]{And lastly, the declarative stlye of programming along with the languages in question, \progLang{Haskell} and \progLang{Prolog}.}
+\end{itemize}
+
 
 \end{frame}
 
