Added opening  script for What was done Overview in What was done.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -377,8 +377,11 @@ particular domain.}
 
 \subsection{Overview}
 \begin{frame}{What was done Overview}
-	
-	\frametitle{What was done Overview}
+\frametitle{What was done Overview}
+\note[item]{In this section we take a look at the literature and current implementations of \progLang{Prolog} in \progLang{Haskell}.}
+\begin{itemize}
+\item
+\end{itemize}
 	
 \end{frame}
 
