Added Contributions frame to Prototype 1 in What we did.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -598,6 +598,12 @@ operations along with two way pattern matching.}
 
 
 \subsection{Prototype 1}
+\begin{frame}
+\frametitle{Contributions}
+\begin{itemize}
+\item
+\end{itemize}
+\end{frame}
 
 \begin{frame}{Prototype 1}
 \begin{figure}[H]
