Added Contributions frame to Prototype 2 in What we did.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -615,6 +615,14 @@ operations along with two way pattern matching.}
 
 
 \subsection{Prototype 2}
+
+\begin{frame}
+\frametitle{Contributions}
+\begin{itemize}
+\item
+\end{itemize}
+\end{frame}
+
 \begin{frame}{Prototype 2}
 \begin{figure}[H]
   \includegraphics[width=1\textwidth]{Prototype-2-architecture.jpeg}
