Added Contributions frame to Prototype 3 in What we did.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -635,6 +635,13 @@ operations along with two way pattern matching.}
 
 \subsection{Prototype 3}
 
+\begin{frame}
+\frametitle{Contributions}
+\begin{itemize}
+\item
+\end{itemize}
+\end{frame}
+
 \begin{frame}{Prototype 3}
 \begin{figure}[H]
   \includegraphics[width=0.75\textwidth]{Prototype-3-architecture.jpeg}
