Added Contributions frame to Prototype 4 in What we did.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -653,6 +653,14 @@ operations along with two way pattern matching.}
 
 \subsection{Prototype 4}
 
+\begin{frame}
+\frametitle{Contributions}
+\begin{itemize}
+\item
+\end{itemize}
+\end{frame}
+
+
 \begin{frame}{Prototype 4}
 \begin{figure}[H]
   \includegraphics[width=1\textwidth]{Prototype-4-architecture.jpeg}
