--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -79,6 +79,7 @@
 \usepackage{graphicx} % Allows including images
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 \usepackage{tikz}
+\usepackage{comment}
 %---------------------------------------------------------------------------------------------
 %%  This file is really -*-LaTeX-*-
 %%             File:  thesis-macros.sty
