Commented discarded Motivation.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -498,6 +498,8 @@ Programming in a functional language consists of building definitions and using 
 
 
 %% ====================================================================-
+
+\begin{comment}
 \subsection{Motivation}
 \begin{frame}{Motivation}
 \frametitle{(to be discarded ......)}
@@ -516,6 +518,9 @@ Programming in a functional language consists of building definitions and using 
 	Prolog[https://ti.arc.nasa.gov/m/pub-archive/999h/0999\%20\%28Rayner\%29.pdf].}
 \end{itemize}
 \end{frame}
+\end{comment}
+
+
 
 %% ====================================================================-
 \subsection{Scope}
