Commented discarded Scope.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -551,6 +551,7 @@ Programming in a functional language consists of building definitions and using 
 \end{frame}
 
 %% ====================================================================-
+\begin{comment}
 \subsection{Discarded Scope}
 \begin{frame}{Scope}
 \frametitle{(to be discarded ......)}
