Commented discarded Scope.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -566,6 +566,7 @@ truly general purpose language. Commun. ACM 11, 9 (September 1968), 634-638. DOI
 particular domain.} 
 \end{itemize}
 \end{frame}
+\end{comment}
 
 %% ====================================================================-
 %% ====================================================================-
