--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -749,6 +749,7 @@ capabilities.}
 \end{frame}
 
 
+\begin{comment}
 \section{Bibliography}
 \begin{frame}[allowframebreaks]
 	\frametitle{Bibliography}
@@ -757,6 +758,7 @@ capabilities.}
 	\bibliographystyle{plain} 
 	\bibliography{Thesis-Presentation}
 \end{frame}
+\end{comment}
 
 \clearpage
 
