Relocated The End frame.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -748,6 +748,9 @@ capabilities.}
 \end{center}
 \end{frame}
 
+\begin{frame}
+\Huge{\centerline{The End}}
+\end{frame}
 
 \begin{comment}
 \section{Bibliography}
