Added section for The Problem.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -508,6 +508,11 @@ particular domain.}
 
 %% ====================================================================-
 %% ====================================================================-
+\section{The Problem}
+
+
+%% ====================================================================-
+%% ====================================================================-
 \section{What was done}
 
 %% ====================================================================-
