Added content to subsection Prolog in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -367,11 +367,26 @@ to other functions as arguments.}
 
 %% ====================================================================-
 \subsection{\progLang{Prolog}}
-\begin{frame}{\progLang{Prolog}}
-\begin{itemize}
-\item
-\end{itemize}
-
+\begin{frame}
+\frametitle{\progLang{Prolog}}
+  \begin{columns}[T]
+    \begin{column}{.6\textwidth}
+     \begin{block}{}
+General purpose logic programming language with over 20 distributions. \progLang{Prolog} is a programming language borrowing its basic 
+constructs from logic. A pure \progLang{Prolog} program is a logic program, in which an order is defined both clauses in the program and 
+for goals in the body of the clause.
+    \end{block}
+    \end{column}
+    \begin{column}{.4\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=\textwidth]{swipl.png} 
+    \caption{\textsc{SWI Prolog} Distribution}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 
