Changed documentclass options to achieve top centering of text in beamer frames.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -15,7 +15,7 @@
 %	PACKAGES AND THEMES
 %----------------------------------------------------------------------------------------
 
-\documentclass[hideothersubsections]{beamer}
+\documentclass[hideothersubsections, t]{beamer}
 
 \mode<presentation> {
 
