--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -412,7 +412,7 @@ Implementing a language within another language.
 \note[item]{}
 \end{frame}
 
-\begin{frame}{Embedding a Programming Language into another Programming Language}
+\begin{frame}{Embedding \progLang{Prolog}}
 \note[item]{This section deals with embedding a target language in the host environement.}
 \note[item]{The aim of this approach to bring the target language functionalities to the host language.}
 \begin{itemize}
