hanged enumerate to itemize in Embedding Languages frame.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -400,7 +400,7 @@ for goals in the body of the clause.
 
 Implementing a language within another language.
 
-\begin{enumerate}
+\begin{itemize}
 \item Foreign Function Interface (FFI)
  \\* A mechanism by which a program written in one programming language can make use of services written in another language. 
 \\* For example, \progLang{Haskell} provides a mechanism to embed \progLang{C} code in its programs.
@@ -408,7 +408,7 @@ Implementing a language within another language.
 \item Library or Module Extension
 \\* Replicate the features and characteristics of the target language into the host. 
 \\* For example, \progLang{LogLisp} is \progLang{Prolog} library for \progLang{Lisp}. 
-\end{enumerate}
+\end{itemize}
 \note[item]{}
 \end{frame}
 
