Added content to  Merging Paradigms in Multi Paradigm Languages.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -434,6 +434,20 @@ Implementing a language within another language.
 
 %% ====================================================================-
 \subsection{Multi Paradigm Languages}
+
+\begin{frame}
+\frametitle{Merging Paradigms}
+\begin{itemize}
+\item Combining different programming paradigms or programming styles in one environment or in one system.
+
+\item The idea of a multi paradigm language is to provide a framework in which programmers can work in a variety of styles, freely
+intermixing constructs from different paradigms.
+\end{itemize}
+\note[item]{}
+
+\end{frame}
+
+
 \begin{frame}{Multi Paradigm Languages (Functional Logic Languages)}
 \note[item]{In this section we talk about languages that exhibit properties from multiple paradigms.}
 \begin{itemize}
