Added content to Programmer's Dilema in Problem Statement.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -580,6 +580,14 @@ capabilities.}
 
 \end{frame}
 
+%% ====================================================================-
+\begin{frame}
+\frametitle{Programmer's Dilemma}
+\begin{figure}
+    \includegraphics[height = 0.6\textwidth, width=0.6\textwidth]{programming-languages_2.png} 
+    \caption{The Graph of programming Languages}
+ \end{figure} 
+\end{frame}
 
 %% ====================================================================-
 %% ====================================================================-
