Added script to Programmer's Dilema in Problem Statement.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -587,6 +587,7 @@ capabilities.}
     \includegraphics[height = 0.6\textwidth, width=0.6\textwidth]{programming-languages_2.png} 
     \caption{The Graph of programming Languages}
  \end{figure} 
+ \note[item]{}
 \end{frame}
 
 %% ====================================================================-
