--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -475,9 +475,20 @@ operations along with two way pattern matching.}
 
 %% ====================================================================-
 \subsection{Related Concepts}
-\begin{frame}{Related Concepts}
+\begin{frame}[allowframebreaks]{Related Concepts}
 \begin{itemize}
 \item Monads
+
+Monads in \progLang{Haskell} can be thought of as composable computation descriptions. The essence of monad is thus separation of 
+composition timeline from the composed computation's execution timeline, as well as the ability of computation to implicitly carry extra 
+data, as pertaining to the computation itself, in addition to its one (hence the name) output, that it will produce when run (or queried, 
+or called upon). This lends monads to supplementing pure calculations with features like I/O, common environment or state, etc. 
+
+A monad is a structure that represents computations defined as sequences of steps: a type with a monad structure defines what it means to 
+chain operations, or nest functions of that type together. This allows the programmer to build pipelines that process data in a series of 
+steps (also called actions), in which each action is decorated with additional processing rules provided by the monad.
+
+A monad is a parameterized type which is an instance of the Monad type class, which defines >>= along with a few other operators.
 
 \item Pattern Matching
 
